Fixed connect border from disappearing and aligned testimonial text

--- a/src/Connect/Connect.module.scss
+++ b/src/Connect/Connect.module.scss
@@ -140,7 +140,7 @@
 
 .fieldLabel {
   position: absolute;
-  bottom: 0;
+  bottom: 2px;
   left: 0;
   height: 100%;
   width: 100%;
