--- a/src/Testimonials/Testimonials.module.scss
+++ b/src/Testimonials/Testimonials.module.scss
@@ -80,4 +80,5 @@
 
 .quote {
   max-width: 60rem;
+  text-align: center;
 }
